# cookiecutter-cpp

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo-name}}/: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md
{{cookiecutter.repo_name}}/: .clangd  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md
{{cookiecutter.repo_name}}/src/: CMakeLists.txt  add.h  main.cpp  tmp.h
{{cookiecutter.repo_name}}/tests/: CMakeLists.txt  main.cpp  test_add.cpp
